Improved viffw with PMD.